--- a/spa-demo/no-flask-spa/index.html
+++ b/spa-demo/no-flask-spa/index.html
@@ -13,8 +13,7 @@
       <a href="#about">About</a>
       <a href="#services">Services</a>
       <a href="#contact">Contact</a>
-      <a href="index.html">index.html</a>
-      <a href="blog.html">blog.html</a>
+      <a href="blog.html">Blog</a>
     </nav>
 
     <div class="page" id="page-index">
