--- a/spa-demo/no-flask-spa/blog.html
+++ b/spa-demo/no-flask-spa/blog.html
@@ -1,2 +1,3 @@
-<a href="index.html">go back to index.html</a>
+<a href="index.html">index.html</a>
+<a href="index.html#about">index.html (about page)</a>
 <h1>this is blog</h1>
